--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             position:relative;
         }
          #whole-body {
+             width: 600px;
              margin: auto;
             }
         
